# Spider

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  REFACTOR_GUIDE.md  cookie.json  gym.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  result.txt  script_of_course_selection.py  test.py  信息门户.py  全民k歌.py  发邮件.py  教务系统.py
.github/workflows/: ci.yml  release.yml
automation/door_control/: main.py  setting.py  setting.py.example
automation/door_control/templates/: show_password.html
automation/hospital_booking/: config.py.example  main.py
automation/laundry_booking/: main.py
automation/oauth2_auth/: server.py
bupt_second_class_ticket/: main.py
campus/empty_classroom/: 空教室.py
campus/grade_check/: 信息门户.py  发邮件.py
campus/gym_booking/: main.py
campus/second_class/: main.py
check_course_result/: README.md  信息门户.py  发邮件.py
check_empty_classroom/: 空教室.py
common/: base_scraper.py  http_client.py  logger.py  utils.py
core/: py.typed
core/common/: __init__.py  config.py  exceptions.py  http_client.py  security.py
course_selection/: script_of_course_selection.py
docs/: DIRECTORY_RESTRUCTURE.md
github-oauth2/: setting.py
hospital/: main.py
house_buy/: anjuke.py  house_analysis.py
house_door/: door.chls  main.py  setting.py  setting.py.example
house_door/templates/: index.html
io-multiplexing/: client.py  server.py
laundry-machine/: config.py.example  main.py
pdf/: main.py
scrapers/finance_news/: main.py
scrapers/house_price/: analysis.json  anjuke_refactored.py  config.py  house_analysis.py  paste.txt  properties.json  test.py
scrapers/pdf_extract/: spider.py
scrapers/sports_data/: config.py  extract.py  fis_competitions.json  gymnastics.xlsx  提示词.txt
scrapers/sports_data/output/: 10.Volleyball.xlsx  11.xlsx  20.xlsx  28.xlsx  3.archery.xlsx  34.xlsx  36.xlsx  37.xlsx  38.xlsx  4.fina.xlsx  40.xlsx  41.xlsx  44.xlsx  45.xlsx  46.atp.xlsx  46.itf.xlsx  47.xlsx  49.xlsx  5.xlsx  50.xlsx  6.xlsx  7.xlsx  8.xlsx
scrapers/sports_data/py/: 1.gymnastics.py  1.gymnastics_refactored.py  12.py  14.py  15.py  19.py  20.py  28.py  29.py  3.archery.py  34.py  40.py  45.py  46.itf.py  48.py  7.py
scrapers/sports_data/py/util/: log.py
shell/: main.py  main.sh  result.txt  sentences.txt
sport/: www.fis-ski.com.xlsx  副本网站清单及抓取信息（0208）.numbers  副本网站清单及抓取信息（0208）.xlsx  提示词.txt
sport/output/: 1.gymnastics.xlsx  10.BeachVolleyball.xlsx  10.Volleyball.xlsx  11.xlsx  14.xlsx  15.xlsx  16.xlsx  19.xlsx  2.fis-ski.xlsx  21.xlsx  22.xlsx  28.xlsx  29.xlsx  3.archery.xlsx  31.xlsx  34.xlsx  36.xlsx  37.xlsx  38.xlsx  40.xlsx  41.xlsx  42.xlsx  44.xlsx  46.atp.xlsx  46.wta.xlsx  47.xlsx  48.xlsx  49.xlsx  50.xlsx  7.xlsx  8_chn.xlsx  9.xlsx
sport/py/: 1.gymnastics.py  10.BeachVolleyball.py  10.Volleyball.py  11.py  14.py  15.py  16.py  19.py  2.fis-ski.py  20.py  21.py  22.py  28.py  3.archery.py  31.py  34.py  36.py  37.py  38.py  4.fina.py  41.py  42.py  44.py  45.py  46.atp.py  46.itf.py  46.wta.py  47.py  48.py  49.py  5.py  50.py  6.py  7.py  8_chn.py  9.py
test/: 2fa.py  course.py
tests/: __init__.py  conftest.py  test_core_common.py  test_scrapers.py
